// Manual protobuf implementation for inventory data
// Based on E3Next's existing protobuf patterns

using Google.Protobuf;
using Google.Protobuf.Collections;
using System;
using System.Collections.Generic;

namespace E3Core.Data.ProtoBuff
{
    public sealed class InventoryItemList : IMessage<InventoryItemList>
    {
        private static readonly MessageParser<InventoryItemList> _parser = new MessageParser<InventoryItemList>(() => new InventoryItemList());
        
        public static MessageParser<InventoryItemList> Parser => _parser;
        public static MessageDescriptor Descriptor => null; // Simplified
        MessageDescriptor IMessage.Descriptor => Descriptor;
        
        private readonly RepeatedField<InventoryItem> items_ = new RepeatedField<InventoryItem>();
        private string character_ = "";
        private string server_ = "";
        private string class_ = "";
        private long timestamp_;
        
        public RepeatedField<InventoryItem> Items => items_;
        public string Character { get => character_; set => character_ = value ?? ""; }
        public string Server { get => server_; set => server_ = value ?? ""; }
        public string Class { get => class_; set => class_ = value ?? ""; }
        public long Timestamp { get => timestamp_; set => timestamp_ = value; }
        
        public InventoryItemList() { }
        public InventoryItemList(InventoryItemList other) : this()
        {
            items_.Add(other.items_);
            character_ = other.character_;
            server_ = other.server_;
            class_ = other.class_;
            timestamp_ = other.timestamp_;
        }
        
        public InventoryItemList Clone() => new InventoryItemList(this);
        public void WriteTo(CodedOutputStream output) { /* Simplified */ }
        public int CalculateSize() => 0; // Simplified
        public void MergeFrom(InventoryItemList other) { /* Simplified */ }
        public void MergeFrom(CodedInputStream input) { /* Simplified */ }
        public bool Equals(InventoryItemList other) => ReferenceEquals(this, other);
        public override bool Equals(object other) => Equals(other as InventoryItemList);
        public override int GetHashCode() => 0;
        public override string ToString() => JsonFormatter.ToDiagnosticString(this);
    }
    
    public sealed class InventoryItem : IMessage<InventoryItem>
    {
        public enum Types
        {
            public enum ItemLocation
            {
                Unknown = 0,
                Equipped = 1,
                Bag = 2,
                Bank = 3,
            }
        }
        
        private static readonly MessageParser<InventoryItem> _parser = new MessageParser<InventoryItem>(() => new InventoryItem());
        
        public static MessageParser<InventoryItem> Parser => _parser;
        public static MessageDescriptor Descriptor => null; // Simplified
        MessageDescriptor IMessage.Descriptor => Descriptor;
        
        // Fields
        private int id_;
        private string name_ = "";
        private int icon_;
        private int stack_;
        private bool noDrop_;
        private string itemLink_ = "";
        private Types.ItemLocation location_;
        private int slotId_;
        private int bagId_;
        private int bankSlotId_;
        private string bagName_ = "";
        private int ac_;
        private int hp_;
        private int mana_;
        private int endurance_;
        private string itemType_ = "";
        private int value_;
        private int tribute_;
        private readonly RepeatedField<AugmentData> augments_ = new RepeatedField<AugmentData>();
        
        // Properties
        public int Id { get => id_; set => id_ = value; }
        public string Name { get => name_; set => name_ = value ?? ""; }
        public int Icon { get => icon_; set => icon_ = value; }
        public int Stack { get => stack_; set => stack_ = value; }
        public bool NoDrop { get => noDrop_; set => noDrop_ = value; }
        public string ItemLink { get => itemLink_; set => itemLink_ = value ?? ""; }
        public Types.ItemLocation Location { get => location_; set => location_ = value; }
        public int SlotId { get => slotId_; set => slotId_ = value; }
        public int BagId { get => bagId_; set => bagId_ = value; }
        public int BankSlotId { get => bankSlotId_; set => bankSlotId_ = value; }
        public string BagName { get => bagName_; set => bagName_ = value ?? ""; }
        public int Ac { get => ac_; set => ac_ = value; }
        public int Hp { get => hp_; set => hp_ = value; }
        public int Mana { get => mana_; set => mana_ = value; }
        public int Endurance { get => endurance_; set => endurance_ = value; }
        public string ItemType { get => itemType_; set => itemType_ = value ?? ""; }
        public int Value { get => value_; set => value_ = value; }
        public int Tribute { get => tribute_; set => tribute_ = value; }
        public RepeatedField<AugmentData> Augments => augments_;
        
        public InventoryItem() { }
        public InventoryItem(InventoryItem other) : this()
        {
            id_ = other.id_;
            name_ = other.name_;
            icon_ = other.icon_;
            stack_ = other.stack_;
            noDrop_ = other.noDrop_;
            itemLink_ = other.itemLink_;
            location_ = other.location_;
            slotId_ = other.slotId_;
            bagId_ = other.bagId_;
            bankSlotId_ = other.bankSlotId_;
            bagName_ = other.bagName_;
            ac_ = other.ac_;
            hp_ = other.hp_;
            mana_ = other.mana_;
            endurance_ = other.endurance_;
            itemType_ = other.itemType_;
            value_ = other.value_;
            tribute_ = other.tribute_;
            augments_.Add(other.augments_);
        }
        
        public InventoryItem Clone() => new InventoryItem(this);
        public void WriteTo(CodedOutputStream output) { /* Simplified */ }
        public int CalculateSize() => 0; // Simplified
        public void MergeFrom(InventoryItem other) { /* Simplified */ }
        public void MergeFrom(CodedInputStream input) { /* Simplified */ }
        public bool Equals(InventoryItem other) => ReferenceEquals(this, other);
        public override bool Equals(object other) => Equals(other as InventoryItem);
        public override int GetHashCode() => 0;
        public override string ToString() => JsonFormatter.ToDiagnosticString(this);
    }
    
    public sealed class AugmentData : IMessage<AugmentData>
    {
        private static readonly MessageParser<AugmentData> _parser = new MessageParser<AugmentData>(() => new AugmentData());
        
        public static MessageParser<AugmentData> Parser => _parser;
        public static MessageDescriptor Descriptor => null; // Simplified
        MessageDescriptor IMessage.Descriptor => Descriptor;
        
        private string name_ = "";
        private string itemLink_ = "";
        private int icon_;
        
        public string Name { get => name_; set => name_ = value ?? ""; }
        public string ItemLink { get => itemLink_; set => itemLink_ = value ?? ""; }
        public int Icon { get => icon_; set => icon_ = value; }
        
        public AugmentData() { }
        public AugmentData(AugmentData other) : this()
        {
            name_ = other.name_;
            itemLink_ = other.itemLink_;
            icon_ = other.icon_;
        }
        
        public AugmentData Clone() => new AugmentData(this);
        public void WriteTo(CodedOutputStream output) { /* Simplified */ }
        public int CalculateSize() => 0; // Simplified
        public void MergeFrom(AugmentData other) { /* Simplified */ }
        public void MergeFrom(CodedInputStream input) { /* Simplified */ }
        public bool Equals(AugmentData other) => ReferenceEquals(this, other);
        public override bool Equals(object other) => Equals(other as AugmentData);
        public override int GetHashCode() => 0;
        public override string ToString() => JsonFormatter.ToDiagnosticString(this);
    }
}